clause-extraction/force-app/main/default/objects/Clauses_Extraction_Event__e/Clauses_Extraction_Event__e.object-meta.xml
<CustomObject>
    <label>Clauses Extraction Event</label>
    <pluralLabel>Clauses Extraction Events</pluralLabel>
</CustomObject>