clause-extraction/force-app/main/default/objects/Clauses_Extraction_Event__e/fields/Bulk_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Job_Id__c</fullName>
    <label>Bulk Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>