clause-extraction/force-app/main/default/objects/Clauses_Extraction_Event__e/fields/Total_Clauses_Error__c.field-meta.xml
<CustomField>
    <fullName>Total_Clauses_Error__c</fullName>
    <label>Total Clauses Error</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>